# ai-shell-agent

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.json  file_list.txt  pyproject.toml  pyproject.toml.bak.20250423_030731_186607  requirements.txt  rework_plan.md  session.json  setup.cfg  setup.py  to_do
.github/workflows/: python-publish.yml  static.yml
ai_shell_agent/: __init__.py  ai.py  aider_integration.py  aider_integration_and_tools.py  changelog.md  chat_manager.py  chat_state_manager.py  config_manager.py  console_io.py  console_manager.py  llm.py  paths.py  prompts.py  settings.py  terminal_tools.py  to_do.md  tool_registry.py  tools.py  utils.py
ai_shell_agent/default_settings/: default_settings.json
ai_shell_agent/integrations/: __init__.py  aider_bridge.py
ai_shell_agent/prompts/: additional_prompt.py  ai_editor_prompt.py  default_prompt.py  file_editor_prompt.py  prompts.py  terminal_prompt.py
ai_shell_agent/shell_agent/: prompts.py  state.py  tools.py
ai_shell_agent/texts/: en_texts.json  german_texts.json  polish_texts.json
ai_shell_agent/tools/: __init__.py  aider_tools.py
ai_shell_agent/toolsets/: toolsets.py
ai_shell_agent/toolsets/aider/: prompts.py  toolset.py
ai_shell_agent/toolsets/aider/integration/: integration.py
ai_shell_agent/toolsets/aider/texts/: en_texts.json  german_texts.json  polish_texts.json
ai_shell_agent/toolsets/cognitive/: prompts.py  toolset.py
ai_shell_agent/toolsets/cognitive/texts/: en_texts.json
ai_shell_agent/toolsets/files/: prompts.py  toolset.py
ai_shell_agent/toolsets/files/integration/: integration.py
ai_shell_agent/toolsets/files/texts/: en_texts.json  german_texts.json  polish_texts.json
ai_shell_agent/toolsets/files/tools/: tools.py
ai_shell_agent/toolsets/terminal/: prompts.py  toolset.py
ai_shell_agent/toolsets/terminal/texts/: en_texts.json  german_texts.json  polish_texts.json
ai_shell_agent/utils/: config_reader.py  env.py  localize.py
data/toolsets/: aider.json
docs/: acknowledgements.md  development.md  index.html  index.md  installation.md  usage.md
docs/ai-shell-agent/: index.html
docs_md/: how_to_add_toolsets.md  updating_styles.md
misc/: delete_pycache.py
shellai/: ai.py
tests/: test_aider_integration.py  test_chat_manager.py  test_interactive_shell.py
