[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-shell-agent"
version = "0.2.0"
description = "AI agent in your Terminal / CMD / Console - an AI application that helps perform tasks by writing and executing terminal commands with user supervision and by answering questions."
authors = [
    { name = "Lael Al-Halawani", email = "laelhalawani@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "python-dotenv==1.0.1",
    "langchain_openai==0.3.2",
    "langchain_google_genai==2.1.2",
    "langchain_experimental==0.3.4",
    "prompt_toolkit==3.0.50",
    "aider-chat==0.79.2",
    "gitpython==3.1.44",
    "watchfiles==1.0.4",
    "rich==13.9.4",
    "rapidfuzz==3.13.0"
]
dynamic = ["classifiers"]

[project.scripts]
ai = "ai_shell_agent.ai:main"

[project.urls]
"Homepage" = "https://github.com/laelhalawani/ai-shell-agent"

[tool.setuptools]
