[metadata]
name = ai-shell-agent
version = 0.1.2
description = A command-line AI chat application that helps perform tasks by writing and executing terminal commands
author = Your Name
author_email = your.email@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/ai-shell-agent
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    python-dotenv
    langchain_openai
    langchain_experimental
    prompt_toolkit

[options.entry_points]
console_scripts =
    ai = ai_shell_agent.ai:main
